<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="250dp"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/white"
    app:cardCornerRadius="12dp"
    android:forceDarkAllowed="false">

    <LinearLayout
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:background="#8A7AA3"
        android:padding="24dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/the_game_2048"
            android:fontFamily="@font/new_font"
            android:textColor="#F2B230"
            android:textSize="20sp"
            android:textStyle="bold" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:fontFamily="@font/new_font"
            android:justificationMode="inter_word"
            android:text="@string/info"
            android:textColor="#EEE5DB"
            tools:ignore="UnusedAttribute" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_ok"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:fontFamily="@font/new_font"
            android:layout_marginVertical="8dp"
            android:background="@drawable/button_background"
            android:text="@string/ok" />

    </LinearLayout>

</androidx.cardview.widget.CardView>