<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#57407C"
    android:forceDarkAllowed="false"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:padding="40dp"

        android:src="@drawable/new_ground"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />



    <TextView
        android:id="@+id/playbtn"
        android:layout_width="90dp"
        android:layout_height="85dp"
        android:background="@drawable/button_for_pla"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:text="@string/play"
        android:padding="4dp"
        android:textSize="32sp"
        android:gravity="center"
        android:fontFamily="@font/new_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/infobtn"
        app:layout_constraintRight_toLeftOf="@id/exitbtn"
        app:layout_constraintTop_toBottomOf="@id/image"
        app:layout_constraintVertical_bias="0.3" />


    <TextView
        android:id="@+id/infobtn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:background="@drawable/for_info_exit"
        android:fontFamily="@font/new_font"
        android:gravity="center"
        android:text="@string/infomenu"
        android:textColor="#FFB23C"
        android:textSize="20sp"
        android:textStyle="bold"
        android:layout_marginStart="30dp"
        app:layout_constraintBottom_toBottomOf="@id/playbtn"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/playbtn" />

    <TextView
        android:id="@+id/exitbtn"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_marginEnd="30dp"
        android:text="@string/exit"
        android:textStyle="bold"
        android:textColor="#CF3768"
        android:textSize="20dp"
        android:fontFamily="@font/new_font"
        android:gravity="center"
        android:background="@drawable/for_info_exit"
        app:layout_constraintBottom_toBottomOf="@id/playbtn"
        app:layout_constraintLeft_toRightOf="@id/playbtn"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="10sp"
        android:textColor="#353333"
        android:textStyle="bold"
        android:fontFamily="@font/new_font"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginBottom="10dp"
        android:text="@string/gita_it_academy"/>


</androidx.constraintlayout.widget.ConstraintLayout>