<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#57407C"
    tools:context=".GameActivity"
    android:forceDarkAllowed="false">


    <FrameLayout
        android:layout_marginBottom="16dp"
        android:id="@+id/target"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:background="@drawable/background_not_touch"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@id/mainContainer"
        app:layout_constraintStart_toStartOf="@id/mainContainer">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="4dp"
            android:text="@string/target"
            android:textColor="#C4BFD1"
            android:textSize="10sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/realTarget"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:fontFamily="@font/new_font"
            android:text="@string/_2048"
            android:textColor="@color/white"
            android:textSize="35sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/score"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/background_not_touch"
        android:padding="4dp"
        app:layout_constraintBottom_toTopOf="@id/record"
        app:layout_constraintEnd_toEndOf="@id/mainContainer"
        app:layout_constraintStart_toEndOf="@id/target"
        app:layout_constraintTop_toTopOf="@id/target">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="4dp"
            android:text="@string/score"
            android:textColor="#C4BFD1"
            android:textSize="10sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/realScore"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center|end"
            android:fontFamily="@font/new_font"
            android:text="@string/_0"
            android:layout_marginEnd="4dp"
            android:textColor="@color/white"
            android:textSize="30sp" />
    </FrameLayout>
    <FrameLayout
        android:id="@+id/record"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:background="@drawable/background_not_touch"
        android:padding="4dp"
        app:layout_constraintBottom_toBottomOf="@id/target"
        app:layout_constraintEnd_toEndOf="@id/mainContainer"
        app:layout_constraintStart_toEndOf="@id/target"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@id/score">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="4dp"
            android:text="@string/highest"
            android:textColor="#C4BFD1"
            android:textSize="10sp"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/realRecord"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_gravity="center|end"
            android:fontFamily="@font/new_font"
            android:text="@string/_0_record"
            android:layout_marginEnd="4dp"

            android:textColor="@color/white"
            android:textSize="30sp"
            />
    </FrameLayout>
    <LinearLayout
        android:id="@+id/mainContainer"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:background="@drawable/backgroundd"
        android:orientation="vertical"
        android:padding="4dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/PlayButton"
                android:text="0"
                android:textSize="33sp"
                tools:text="3" />

            <TextView
                style="@style/PlayButton"
                android:text="0"
                android:textSize="33sp"
                tools:text="3" />

            <TextView
                style="@style/PlayButton"
                android:text="0"
                android:textSize="33sp"
                tools:text="3" />

            <TextView
                style="@style/PlayButton"
                android:text="0"
                android:textSize="33sp"
                tools:text="3" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/PlayButton"
                android:text="0"
                android:textSize="33sp"
                tools:text="3" />

            <TextView
                style="@style/PlayButton"
                android:text="0"
                android:textSize="33sp"
                tools:text="3" />

            <TextView
                style="@style/PlayButton"
                android:text="0"
                android:textSize="33sp"
                tools:text="3" />

            <TextView
                style="@style/PlayButton"
                android:text="0"
                android:textSize="33sp"
                tools:text="3" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/PlayButton"
                android:text="0"
                android:textSize="33sp"
                tools:text="3" />

            <TextView
                style="@style/PlayButton"
                android:text="0"
                android:textSize="33sp"
                tools:text="3" />

            <TextView
                style="@style/PlayButton"
                android:text="0"
                android:textSize="33sp"
                tools:text="3" />

            <TextView
                style="@style/PlayButton"
                android:text="0"
                android:textSize="33sp"
                tools:text="3" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                style="@style/PlayButton"
                android:text="0"
                android:textSize="33sp"
                tools:text="3" />

            <TextView
                style="@style/PlayButton"
                android:text="0"
                android:textSize="33sp"
                tools:text="3" />

            <TextView
                style="@style/PlayButton"
                android:text="0"
                android:textSize="33sp"
                tools:text="3" />

            <TextView
                style="@style/PlayButton"
                android:text="0"
                android:textSize="33sp"
                tools:text="3" />


        </LinearLayout>


    </LinearLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/restart"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        android:textColor="@color/white"
        android:text="@string/new_game_game"
        android:fontFamily="@font/new_font"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@id/undo"
        android:background="@drawable/button_background"
        app:layout_constraintLeft_toLeftOf="@id/mainContainer"

        app:layout_constraintTop_toBottomOf="@id/mainContainer"/>



    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/undo2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/btnudo"
        app:layout_constraintTop_toTopOf="@id/restart"
        app:layout_constraintBottom_toBottomOf="@id/restart"
        app:layout_constraintLeft_toRightOf="@id/restart"
        app:layout_constraintRight_toLeftOf="@id/home"
        android:text="@string/undo"
        android:fontFamily="@font/new_font"
        android:textStyle="bold"
        android:textColor="@color/white"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/undo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginHorizontal="10dp"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toTopOf="@id/restart"
        app:layout_constraintBottom_toBottomOf="@id/restart"
        app:layout_constraintLeft_toRightOf="@id/restart"
        app:layout_constraintRight_toLeftOf="@id/home"
        android:text="@string/undo_2"
        android:fontFamily="@font/new_font"
        android:textStyle="bold"
        android:textColor="@color/white"/>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/home"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/exit_game"
        android:fontFamily="@font/new_font"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@drawable/button_background"
        app:layout_constraintTop_toTopOf="@id/undo"
        app:layout_constraintBottom_toBottomOf="@id/undo"
        app:layout_constraintLeft_toRightOf="@id/undo"
        app:layout_constraintRight_toRightOf="@id/mainContainer"/>




</androidx.constraintlayout.widget.ConstraintLayout>