<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="270dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:layout_height="120dp"
    android:forceDarkAllowed="false">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="#3BA8A9"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/idstart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_a_new_game"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginTop="8dp"
            android:textColor="@color/white"
            android:fontFamily="@font/new_font"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/yesid"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:fontFamily="@font/new_font"
            android:text="@string/yes"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background"
            app:layout_constraintLeft_toLeftOf="@id/idstart"
            app:layout_constraintTop_toBottomOf="@id/idstart"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toLeftOf="@id/noid"/>




        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/noid"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:layout_marginStart="8dp"
            android:fontFamily="@font/new_font"
            android:text="@string/no"
            android:background="@drawable/button_background"
            app:layout_constraintRight_toRightOf="@id/idstart"
            app:layout_constraintTop_toTopOf="@id/yesid"
            app:layout_constraintLeft_toRightOf="@id/yesid"
            app:layout_constraintBottom_toBottomOf="@id/yesid"/>









    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>